// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer snapshot a DrawerButton 1`] = `
<div>
  <label
    class="btn btn-ghost btn-circle"
    for="menu-test"
  >
    <svg
      aria-hidden="true"
      class="h-6 w-6"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 20 20"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
        fill-rule="evenodd"
      />
    </svg>
  </label>
</div>
`;

exports[`Drawer snapshot a globale menu 1`] = `
<div>
  <div
    class="drawer"
  >
    <input
      class="drawer-toggle"
      id="menu-test"
      type="checkbox"
    />
    <div
      class="drawer-content"
    >
      <div>
        test
      </div>
    </div>
    <div
      class="drawer-side"
    >
      <label
        class="drawer-overlay"
        for="menu-test"
      />
      <ul
        class="menu p-4 overflow-y-auto w-80 bg-base-200 text-base-content"
      >
        <li>
          <a
            class="justify-between"
            href="/#"
          >
            My library
            <span
              class="badge"
            >
              90
            </span>
          </a>
        </li>
        <li>
          <a
            class="justify-between"
            href="/#"
          >
            Ranking
            <span
              class="badge"
            >
              13
            </span>
          </a>
        </li>
        <li>
          <a
            class="justify-between"
            href="/#"
          >
            Quote
            <span
              class="badge"
            >
              84
            </span>
          </a>
        </li>
        <li>
          <a
            class="justify-between"
            href="/random"
          >
            I'm Feeling Lucky
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Drawer snapshot a globale menu 2`] = `
<input
  class="drawer-toggle"
  id="menu-test"
  type="checkbox"
/>
`;

exports[`Drawer snapshot a globale menu 3`] = `
<div
  class="drawer-content"
>
  <div>
    test
  </div>
</div>
`;

exports[`Drawer snapshot a globale menu 4`] = `
<div
  class="drawer-side"
>
  <label
    class="drawer-overlay"
    for="menu-test"
  />
  <ul
    class="menu p-4 overflow-y-auto w-80 bg-base-200 text-base-content"
  >
    <li>
      <a
        class="justify-between"
        href="/#"
      >
        My library
        <span
          class="badge"
        >
          90
        </span>
      </a>
    </li>
    <li>
      <a
        class="justify-between"
        href="/#"
      >
        Ranking
        <span
          class="badge"
        >
          13
        </span>
      </a>
    </li>
    <li>
      <a
        class="justify-between"
        href="/#"
      >
        Quote
        <span
          class="badge"
        >
          84
        </span>
      </a>
    </li>
    <li>
      <a
        class="justify-between"
        href="/random"
      >
        I'm Feeling Lucky
      </a>
    </li>
  </ul>
</div>
`;
